<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.papa247</groupId>
    <artifactId>john</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <organization>
        <name>PAPA-247</name>
        <url>https://teampapa.cnewb.co</url>
    </organization>
    <url>https://github.com/PAPA-247/john</url>
    <description>CSCE247 Project: John</description>
	<repositories>
	  <repository>
	    <id>charm-glisten</id>
	    <name>charm-glisten Repository</name>
	    <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
	    <layout>default</layout>
	  </repository>
	</repositories>
	<dependencies>
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-controls</artifactId>
	        <version>11.0.2</version>
	    </dependency>
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-fxml</artifactId>
	        <version>11.0.2</version>
	    </dependency>
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-base</artifactId>
	        <version>11.0.2</version>
	    </dependency>
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-graphics</artifactId>
	        <version>11.0.2</version>
	    </dependency>
	    <dependency>
	        <groupId>com.jfoenix</groupId>
	        <artifactId>jfoenix</artifactId>
	        <version>9.0.9</version>
	    </dependency>
	    <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20200518</version>
        </dependency>
        <dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-core</artifactId>
		    <version>11.5.0</version>
		</dependency>
        <dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-javafx</artifactId>
		    <version>11.5.0</version>
		</dependency>
		<dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-fontawesome5-pack</artifactId>
		    <version>11.5.0</version>
		</dependency>
		<dependency>
		    <groupId>org.kordamp.ikonli</groupId>
		    <artifactId>ikonli-material-pack</artifactId>
		    <version>11.5.0</version>
		</dependency>
	    <dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-api</artifactId>
	        <version>5.4.2</version>
	    </dependency>
	    <dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-engine</artifactId>
	        <version>5.4.2</version>
	    </dependency>
	    <dependency>
		    <groupId>org.testfx</groupId>
		    <artifactId>testfx-core</artifactId>
		    <version>4.0.16-alpha</version>
		</dependency>
	</dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
				    <archive>
				        <manifest>
				            <mainClass>com.papa247.john.App</mainClass>
				            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
				        </manifest>
				    </archive>
				</configuration>
            </plugin>
		    <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <version>2.22.1</version>
		    </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4</version>
                <configuration>
                    <mainClass>com.papa247.john.App</mainClass>
                    <options>
                        <option>--add-opens</option><option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                        <option>--add-opens</option><option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
                        <option>--add-opens</option><option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
                        <option>--add-opens</option><option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
                        <option>--add-opens</option><option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
                        <option>--add-opens</option><option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                        <option>--add-exports</option><option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
                        <option>--add-exports</option><option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
                        <option>--add-exports</option><option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
                        <option>--add-exports</option><option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
                        <option>--add-exports</option><option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                    </options>
                </configuration>
            </plugin>
            <!-- <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4</version>
                <configuration>
                    <mainClass>com.papa247.john.App</mainClass>
                </configuration>
            </plugin>-->
            
        </plugins>
    </build>
</project>